--- a/index.html
+++ b/index.html
@@ -363,8 +363,8 @@ E-mail: sarahnovaes906@outlook.com.br
 <br>Rua Castelo Branco, 2048, Olaria, Vila Velha - ES, CEP: 29100-590
 <br><br>
 
-📞 Telefone/WhatsApp: (27) 98131-8524
-<br>📧 E-mail: contato@useative.com.br
+📞 Telefone/WhatsApp: (31) 98021-3658
+<br>📧 E-mail: sarahnovaes906@outlook.com.br
 <br><br>
 
 Horário de Atendimento:
